22 May 2010, RMM: tweaked comments and released v0.3a
  * Changed copyright information on modified files to 2010
  * Updated "to do" comments to use "#! TODO:" as prefix

11 Feb 2010, GR: implemented and tested state space feedback
15 Jan 2010, GR: added new example, improved bode

4 Jan 2010, GR: updated bode plots
  * made bode plot more like matlab
  * added options for plotting in dB, Hz

27 Dec 2009, GR: important bug fix: feedback TFs were being divided by two
  
10 Oct 09, RMM: reset matplotlib import in secord-matlab
  * Using 'from matplotlib import *' causes error with figures
  * On my other computer, got error when trying to import 'matplotlib.pyplot'
  * Need to sort out versions and figure out proper import structure

13 Sep 09, RMM: added basic state space functionality
  * Updated StateSpace routines to allow BD algebra with constants
  * Updated pvtol-nested example to try to use state space representation
    (not completely working yet)

12 Sep 09, RMM: code restructuring for transfer functions
  * Implemented feedback() method in bldalg; partially working
    for mixture of TF, SS and numbers (not thoroughly tested yet)
  * New feedback method for TransferFunctions
  * Updated gangof4 to use new feedback function

9 Sep 09, RMM: updated pzmap to generate a plot (turn off with Plot=False)

8 Sep 09, RMM: rewrite of xferfcn to handle type casting better
  * Appropriate functions now call convertToTransferFunction
  * Restricted transfer function to SISO only

7 Sep 09, RMM: additional fixes
  * Implemented block diagram operations for SISO transfer functions
  * Modified frequency response functions for transfer functions
  * Added rudimentary pole/zero computations
  * Added comments on things that need to be fixed (search for !)

5 Sep 09, RMM: updates to get standard examples working
  * Copied and converted pvtol_nested.py from AM08, Chapter 11
  * Updated freqresp to use poly1d for computing values