@@ -1,3 +1,6 @@
+29 May 2010, RMM: updated function documentation
+  * Added __doc__ strings for all current functions
+
 22 May 2010, RMM: tweaked comments and released v0.3a
   * Changed copyright information on modified files to 2010
   * Updated "to do" comments to use "#! TODO:" as prefix
